# 3DGS-Anchor

./: .gitignore  main.py  notebook.py  pyproject.toml
.claude/skills/marimo-pair/reference/: gotchas.md
.claude/skills/molab-launch-session/: SKILL.md
.claude/skills/molab-launch-session/reference/: handoff-status.md
.claude/skills/molab-launch-session/scripts/: launch-session.py
.claude/skills/sync-molab-notebook/: SKILL.md
.claude/skills/sync-molab-notebook/scripts/: push-package.py  sync-notebook.py
src/gs_anchor/: __init__.py  anchors.py  colmap_io.py  gaussians.py  model.py  ply_io.py  render.py  train.py
