[project]
name = "3dgs-anchor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.13",
    "torch==2.12.1",
    "numpy==2.5.1",
    "matplotlib==3.11.0",
    "plyfile==1.1.4",
    "gsplat==1.5.3",
    "nvidia-cuda-nvcc==13.0.*",
    "nvidia-cuda-cccl==13.0.*",
    "nvidia-cuda-crt==13.0.*",
    "nvidia-cuda-runtime==13.0.*",
    "nvidia-nvvm==13.0.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gs_anchor"]
